--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
@@ -117,23 +117,23 @@
 
             <ul class="card-set">
               <div class="card-set__wrapper">
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/laptop.jpg"
                         alt="ноутбук"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -141,30 +141,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Технокряк</h2>
-                      <p class="aside-text">Веб-сайт</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Технокряк</h2>
+                      <p class="card-set__text">Веб-сайт</p>
                     </div>
                   </a>
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/basketball-players.jpg"
                         alt="два баскетболысти з мячем"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -172,32 +172,32 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">
                         Постер New Orlean vs Golden Star
                       </h2>
-                      <p class="aside-text">Дизайн</p>
+                      <p class="card-set__text">Дизайн</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/fish.jpg"
                         alt="лого на фоні риби"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -205,30 +205,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Ресторан Seafood</h2>
-                      <p class="aside-text">Додаток</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Ресторан Seafood</h2>
+                      <p class="card-set__text">Додаток</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/headphone.jpg"
                         alt="навушники"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -236,30 +236,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Проєкт Prime</h2>
-                      <p class="aside-text">Маркетинг</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Проєкт Prime</h2>
+                      <p class="card-set__text">Маркетинг</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/boxes.jpg"
                         alt="дві коробки"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -267,30 +267,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Проєкт Boxes</h2>
-                      <p class="aside-text">Додаток</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Проєкт Boxes</h2>
+                      <p class="card-set__text">Додаток</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/monitor.jpg"
                         alt="монітор"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -298,30 +298,32 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Inspiration has no Borders</h2>
-                      <p class="aside-text">Веб-сайт</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">
+                        Inspiration has no Borders
+                      </h2>
+                      <p class="card-set__text">Веб-сайт</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/book.jpg"
                         alt="книга"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -329,30 +331,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Видання Limited Edition</h2>
-                      <p class="aside-text">Дизайн</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Видання Limited Edition</h2>
+                      <p class="card-set__text">Дизайн</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/badge.jpg"
                         alt="бейджик"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -360,30 +362,30 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Проєкт LAB</h2>
-                      <p class="aside-text">Маркетинг</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Проєкт LAB</h2>
+                      <p class="card-set__text">Маркетинг</p>
                     </div></a
                   >
                 </li>
 
-                <li class="aside">
+                <li class="card-set__aside">
                   <a
-                    class="aside-link"
+                    class="card-set__link"
                     href="#"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
                   >
-                    <div class="card-box">
+                    <div class="card-set__box">
                       <img
-                        class="card-foto"
+                        class="card-set__icon"
                         src="./images/working-laptop.jpg"
                         alt="ноутбук на якому працьують"
                         width="370"
                         height="294"
                       />
-                      <div class="card-box-thumb">
-                        <p class="card-box-text">
+                      <div class="card-set__thumb">
+                        <p class="card-set__desc">
                           Ресурс пропонує комплексні пропозиції з різним рівнем
                           функціоналу та сервісів. Все це дозволить відвідувачу
                           отримати вичерпні відомості про компанію чи приватну
@@ -391,9 +393,9 @@
                         </p>
                       </div>
                     </div>
-                    <div class="card-text">
-                      <h2 class="aside-title">Growing Business</h2>
-                      <p class="aside-text">Додаток</p>
+                    <div class="card-set__wrap">
+                      <h2 class="card-set__title">Growing Business</h2>
+                      <p class="card-set__text">Додаток</p>
                     </div></a
                   >
                 </li>
