hw-7-scss-problem

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <li class="site-menu__item">
               <a
                 href="./portfolio.html"
-                class="site-menu__link site-menu__current"
+                class="site-menu__link site-menu--current"
                 >Портфоліо</a
               >
             </li>
