--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <ul class="site-menu">
             <li class="site-menu__item">
-              <a href="./index.html" class="site-menu__link site-menu__current"
+              <a href="./index.html" class="site-menu__link site-menu--current"
                 >Студія</a
               >
             </li>
